--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -5,4 +5,8 @@
 \section{LabelMe}
 LabelMe is the product offered by MIT that our system is intended to be functionally equivalent to.  There are therefore valuable lessons, both good and bad, to be learnt from how LabelMe has been implemented.
 
+With regards to good design practice we can see that LabelMe is compliant with Schneiderman's third, fourth, fifth and sixth golden rules.  The third rule because have a list of labels by the side allowing you to see what labels have been made, also from the good use of colour allowing you to easily see when a object has been completely marked out.  The fourth rule because the dialogue boxes that appear have a clear x in the top right corner which is consistent with user's expectations, also any of the three options done, adjust and delete close the dialogue.  The fifth and sixth of Schneiderman's rules we see as fairly interlinked.  There is support for deleting an object, adjusting an object and undoing one's actions.  This gives us easy reversal of actions and support for error handling.
+
+LabelMe also obeys principles 1, 
+
 \end{document}
