--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -7,6 +7,12 @@ LabelMe is the product offered by MIT that our system is intended to be function
 
 With regards to good design practice we can see that LabelMe is compliant with Schneiderman's third, fourth, fifth and sixth golden rules.  The third rule because have a list of labels by the side allowing you to see what labels have been made, also from the good use of colour allowing you to easily see when a object has been completely marked out.  The fourth rule because the dialogue boxes that appear have a clear x in the top right corner which is consistent with user's expectations, also any of the three options done, adjust and delete close the dialogue.  The fifth and sixth of Schneiderman's rules we see as fairly interlinked.  There is support for deleting an object, adjusting an object and undoing one's actions.  This gives us easy reversal of actions and support for error handling.
 
-LabelMe also obeys principles 1, 
+LabelMe also obeys principles 1, 5, 7 and 10 of Neilson's usability heuristics.  heuristic one is acheived by displaying the labels that have been added and by adding a transluscent layer over all marked objects allowing a user to tell at a glance what they have achieved.  Heuristic 5 is achieved in the same as way as Schneiderman's fifth golden rule.  Heuristic 7 is acheived by using icons which are self explaniatory and by having a simple process to control the application, by this I mean that you do not have to remember combinations of key presses to do anything.  Heuristic 10 is acheived by having a clear help icon seen at all times, this ties in with 7 by using a question mark which is a universal standard for software help.
+
+However it is not all good as we have breaches of Schneiderman's first and second golden laws and Neilson's ninth heuristic.  The first golden law is breached because the erase button is actually an undo button, this mislabelling could be prevented if (CITE DESIGN OF EVERYDAY THINGS DOOR HANDLES BIT) the text labels were removed leaving only the icons.  Although to keep consistent with the rest of the operating system a back arrow would be more useful, but the eraser is consistent with application's aesthetic.  This leads us onto the breach of Neilson's 9th heuristic, although the system is minimalist, it is definitely not aesthetically pleasing: elements of the UI appear unconnected, icons are unevenly spaced and iconsistent in design with the erase button not having a red outline, and on a more subjective level we do not like the cartoony style of its design.  Shneiderman's second law is breached by there not being any short cuts for power users, these could include undo.
+
+In terms of learnability, flexibility and robustness labelme is fairly good.  It appears to be easy for new users to get to grips with learning the tool, and can be labelling images very quickly.  Users can see their progress and easily determine when they have successfully labelled an image.  Flexibility wise labelme is not very flexible but it does not need to be.
+
+Ultimately labelme is perfectly functional and easy to use, although it could be improved in a few areas.  Its biggest problem is that it isn't pretty.  This gives a good starting point for the development of our own image labeller, we have assessed what works well, what doesn't and what is missing.
 
 \end{document}
