named the project, curteousy of Dale, also done the requirements analysis

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -15,4 +15,27 @@ In terms of learnability, flexibility and robustness labelme is fairly good.  It
 
 Ultimately labelme is perfectly functional and easy to use, although it could be improved in a few areas.  Its biggest problem is that it isn't pretty.  This gives a good starting point for the development of our own image labeller, we have assessed what works well, what doesn't and what is missing.
 
+\section{Formal Requirements}
+
+From analysing the mark scheme we were able to identify the following as required functionality:
+\begin{itemize}
+\item Allow annotation of different images
+\item Add, edit and delete labels
+\item Allow saving and loading of labels
+\item The above need to be easy to perform
+\item Everything should follow HCI principles
+\end{itemize}
+The functional aspects of these requirements are not difficult to implement so the challenge, and where we spent most of our time, was to fulfill the softer requirements by making them easy to use and follow the principles.
+
+\section{L'Bl\"{u}r}
+
+\subsection{Design and Process}
+
+\subsection{Good}
+
+\subsection{Bad}
+
+\subsection{Improvements}
+Gallery for viewing, use section within points rather than labels.
+
 \end{document}
