--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -36,6 +36,10 @@ The functional aspects of these requirements are not difficult to implement so t
 \subsection{Bad}
 
 \subsection{Improvements}
-Gallery for viewing, use section within points rather than labels.
+Features that we would have liked to implement but ran out of time for are:
+\begin{itemize}
+\item A gallery of pictures, something like a bar along the bottom that displays all the images in the current directory.  This is good for the user as it means they do not have to keep navigating the file dialogue when they want to start labelling a new image in the same directory (recognition not recall, and reduces load on short term memory).  It also would add colour to the UI making it more attractive.
+\item A gallery of labels, instead of just having a list of the text of labels that have been added to an image we would like the section of the image marked out for labelling to appear in a gallery as an icon for that label.  In cases where there are ambiguous labels, or many objects with the same/similar labels as rather than a user trying to remember which label corresponds to which object, or attempting trial and error to find the match, instead the user would just be able to match areas of the picture with the icons, giving them a much smoother interaction with the system.  This could be combined with the gallery of pictures mentioned above and allowing the user to tab between the two views, this would help keep the application consistent.
+\end{itemize}
 
 \end{document}
