Added a bit of blurb about the design process and outlined some areas to talk about in the next section

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -30,10 +30,23 @@ The functional aspects of these requirements are not difficult to implement so t
 \section{L'Bl\"{u}r}
 
 \subsection{Design and Process}
+Our design process was to iteratively build backend functionality and then make it accessible through the frontend.  And throughout the whole process we would fix bugs and tweak the UI.  To start with we implmented opening new images, adding labels and saving and loading.  We then added ways to access this functionality i.e. buttons.  We then started adding more functionality such as adding and deleting labels.  During this we refined the previous functionality and the user interface, so we fixed bugs that would attempt to load non existant files causing the program to crash, and we made it more user friendly by features like shading in marked areas and adding in right click menus.  This cycle continued, we started to see less backend functionality be added in the cycles and spent more time bug fixing it, but more and more coming into the front-end with the addition of keyboard shortcuts for example.
+
+We feel that this was an effective design discipline that let us build up a solid product rather than focusing to heavily in one area.
 
 \subsection{Good}
 
+\subsubsection{XML}
+\subsubsection{Keyboard Shortcuts}
+\subsubsection{Marking Objects}
+\subsubsection{Undo}
+\subsubsection{Icons}
+
 \subsection{Bad}
+\subsubsection{Screen Flicker}
+\subsubsection{Label Dialogue Boxes}
+\subsubsection{General Aesthetic}
+\subsubsection{No Easy Way to Change Marked Objects}
 
 \subsection{Improvements}
 Features that we would have liked to implement but ran out of time for are:
