--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -7,7 +7,16 @@ LabelMe is the product offered by MIT that our system is intended to be function
 
 With regards to good design practice we can see that LabelMe is compliant with Schneiderman's third, fourth, fifth and sixth golden rules.  The third rule because have a list of labels by the side allowing you to see what labels have been made, also from the good use of colour allowing you to easily see when a object has been completely marked out.  The fourth rule because the dialogue boxes that appear have a clear x in the top right corner which is consistent with user's expectations, also any of the three options done, adjust and delete close the dialogue.  The fifth and sixth of Schneiderman's rules we see as fairly interlinked.  There is support for deleting an object, adjusting an object and undoing one's actions.  This gives us easy reversal of actions and support for error handling.
 
-LabelMe also obeys principles 1, 5, 7 and 10 of Neilson's usability heuristics.  heuristic one is acheived by displaying the labels that have been added and by adding a transluscent layer over all marked objects allowing a user to tell at a glance what they have achieved.  Heuristic 5 is achieved in the same as way as Schneiderman's fifth golden rule.  Heuristic 7 is acheived by using icons which are self explaniatory and by having a simple process to control the application, by this I mean that you do not have to remember combinations of key presses to do anything.  Heuristic 10 is acheived by having a clear help icon seen at all times, this ties in with 7 by using a question mark which is a universal standard for software help.
+LabelMe also obeys principles 1, 5, 7 and 10 of Neilson's usability heuristics. 
+heuristic one is acheived by displaying the labels that have been added and by
+adding a transluscent layer over all marked objects allowing a user to tell at a
+glance what they have achieved.  Heuristic 5 is achieved in the same as way as
+Schneiderman's fifth golden rule.  Heuristic 7 is acheived by using icons which
+are self explaniatory and by having a simple process to control the application,
+ i.e. that you do not have to remember combinations of key presses to do
+anything. Heuristic 10 is acheived by having a clear help icon seen at all
+times, this ties in with 7 by using a question mark which is a universal
+standard for software help.
 
 However it is not all good as we have breaches of Schneiderman's first and second golden laws and Neilson's ninth heuristic.  The first golden law is breached because the erase button is actually an undo button, this mislabelling could be prevented if (CITE DESIGN OF EVERYDAY THINGS DOOR HANDLES BIT) the text labels were removed leaving only the icons.  Although to keep consistent with the rest of the operating system a back arrow would be more useful, but the eraser is consistent with application's aesthetic.  This leads us onto the breach of Neilson's 9th heuristic, although the system is minimalist, it is definitely not aesthetically pleasing: elements of the UI appear unconnected, icons are unevenly spaced and iconsistent in design with the erase button not having a red outline, and on a more subjective level we do not like the cartoony style of its design.  Shneiderman's second law is breached by there not being any short cuts for power users, these could include undo.
 
@@ -37,22 +46,60 @@ We feel that this was an effective design discipline that let us build up a soli
 \subsection{Good}
 
 \subsubsection{Saving and Loading}
-We made the decision that marked points and labels would be stored in an XML file.  This is because XML is good for storing structured data which is what we have.  It also means it is in a semi standard format which would hopefully make it easier if any other labelling software wanted to be used, for example LabelMe which also has xml capability.  This is less a benefit to the user and more a benefit any researchers who want to access the data.
+We made the decision that marked points and labels would be stored in an XML
+file.  This is because XML is good for storing structured data which is what we
+have.  It also means it is in a semi standard format which would hopefully make
+it easier if any other labelling software wanted to be used, for example LabelMe
+which also has xml capability.  Although XML is a human readable format, this is
+less a benefit to the user and more a benefit any researchers who want to access
+the data.
 
-Another decision we made was to not give the user much control over saving and loading.  When you save after doing some marking and labelling the xml file is created in the same directory as the image with the name \emph{imagefilename}.xml.  Then when you press load after opening a new image the relevant file is automatically loaded.  We chose to do this to simplify the process for the user, they have to deal with less menus and they don't have to remember where they saved the data.
+Another decision we made was to not give the user much control over saving and
+loading.  When you save after doing some marking and labelling the xml file is
+created in the same directory as the image with the name
+\emph{imagefilename}.xml.  Then when you press load after opening a new image
+the relevant file is automatically loaded.  We chose to do this to simplify the
+process for the user, they have to deal with fewer menus and they don't have to
+remember where they saved the data.
 
 The only downside is that the directories may start to become cluttered with .xml files.  Which has the potential to annoy some users.  We did consider making the xml files hidden.  This visually solves the clutter problem but makes it harder for any user without some command line knowledge to delete old label files.  For this reason we decided to keep them visible.
 
-Because the actual saving and loading happens behind the scenes it is important to inform the user that things have happened.  When a user saves their work a dialogue opens on completion informing them that the save has been successful.  When a user loads a file, if no file exists they are informed via a dialogue that there was nothing to load, otherwise nothing would happen and this could confuse them.  If there is a file then they are informed via a dialogue that the data was loaded successfully and there is added visual confirmation because marked objects and labels appear on screen.  Likewise when a new image is opened the change in image offers confirmation that it has worked.
+Because the actual saving and loading happens behind the scenes it is important
+to inform the user that things have happened.  When a user saves their work a
+modal dialogue opens on completion informing them that the save has been
+successful. When a user loads a file, if no file exists they are informed via a
+dialogue that there was nothing to load, otherwise nothing would happen and this
+could confuse them.  If the load is successful a modal dialogue reassures the
+user, in addition to the visual confirmation because of objects and
+labels appearing on screen. Likewise when a new image is opened the change in
+image offers confirmation that it has worked.
 
 \subsubsection{Marking Objects}
 \subsubsection{Undo}
 \subsubsection{Icons}
-Icons are important in an application because they inform a user as to what will happen without having to read text.  We are using the gnome tango icon set in our application.  
-
+Icons are important in an application because they inform a user as to what will
+happen without having to read text.  We are using the gnome tango icon set in
+our application.  We order these actions from left to right in a logical order
+of use: loading an image (starting a project) saving, loading a save, adding
+labels and deleting objects. The latter two are deliberately nearest the label
+list on the right in order to have them in easy reach. Our early prototype
+systems had these controls in the right hand panel itself, but it was decided a
+unified and centralised location for all controls helped the coherence of the
+application.
+\subsubsection{Keyboard Shortcuts}
+Keyboard shortcuts were identified as an essential component to improve
+experience once a user has reached a stage of familiarity with the task.
 \subsection{Bad}
 \subsubsection{Screen Flicker}
-Currently there is quite bad screen flicker from having the image redrawn.  This occurs when the window is moved partially offscreen or when dialogue boxes are moved.  This is a very annoying thing to happen and really degrades the user experience.  So in a future version of the software we would definitely want to fix this.  We believe the way to fix this problem would be to perform double buffering.  This is a process where the image is processed in one buffer and then put directly into another buffer to be displayed.  If we were to implement double buffering it would provide the user with a far smoother experience.
+Currently there is quite bad screen flicker from having the image redrawn.  This
+occurs when the window is moved partially offscreen or when dialogue boxes are
+moved.  This is a very annoying thing to happen and substantially degrades the
+user experience. Any version of the software released to end users would
+definitely require a solution to this.  We believe the way to fix this problem
+would be to perform double buffering; a process where the image is processed in
+one buffer and then put directly into another buffer to be displayed.  If we
+were to implement double buffering it would provide the user with a far smoother
+experience.
 \subsubsection{Label Dialogue Boxes}
 \subsubsection{No Easy Way to Change Marked Objects}
 \subsubsection{General Aesthetic}
@@ -60,10 +107,25 @@ Currently there is quite bad screen flicker from having the image redrawn.  This
 \subsection{Improvements}
 Features that we would have liked to implement but ran out of time for are:
 \subsubsection{A gallery of pictures} 
-Having something like a bar along the bottom that displays all the images in the current directory.  This is good for the user as it means they do not have to keep navigating the file dialogue when they want to start labelling a new image in the same directory (recognition not recall, and reduces load on short term memory).  It also would add colour to the UI making it more attractive.
+Having something like a bar along the bottom that displays all the images in the
+current directory.  This is good for the user as it means they do not have to
+keep navigating the file dialogue when they want to start labelling a new image
+in the same directory (recognition not recall, and reduces load on short term
+memory).  It also would add colour to the UI making it more attractive. If the
+goal of the program is to label images en masse, perhaps a simple arrow to
+navigate back and forward (as in an image preview application) would speed the
+process significantly.
 \subsubsection{A gallery of labels}
-Instead of just having a list of the text of labels that have been added to an image we would like the section of the image marked out for labelling to appear in a gallery as an icon for that label.  In cases where there are ambiguous labels, or many objects with the same/similar labels as rather than a user trying to remember which label corresponds to which object, or attempting trial and error to find the match, instead the user would just be able to match areas of the picture with the icons, giving them a much smoother interaction with the system.  This could be combined with the gallery of pictures mentioned above and allowing the user to tab between the two views, this would help keep the application consistent.
-\subsubsection{Keyboard Shortcuts}
+Instead of just having a list of the text of labels that have been added to an
+image we would like the section of the image marked out for labelling to appear
+in a gallery as an icon for that label.  In cases where there are ambiguous
+labels, or many objects with the same/similar labels as rather than a user
+trying to remember which label corresponds to which object, or attempting trial
+and error to find the match, instead the user would just be able to match areas
+of the picture with the icons, giving them a much smoother interaction with the
+system.  This could be combined with the gallery of pictures mentioned above and
+allowing the user to tab between the two views, this would help keep the
+application consistent.
 \subsubsection{Changing Colour of marked objects}
 
 \end{document}
