--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -102,9 +102,11 @@ list on the right in order to have them in easy reach. Our early prototype
 systems had these controls in the right hand panel itself, but it was decided a
 unified and centralised location for all controls helped the coherence of the
 application.
+
 \subsubsection{Keyboard Shortcuts}
 Keyboard shortcuts were identified as an essential component to improve
 experience once a user has reached a stage of familiarity with the task.
+
 \subsection{Bad}
 \subsubsection{Screen Flicker}
 Currently there is quite bad screen flicker from having the image redrawn.  This
@@ -117,6 +119,11 @@ one buffer and then put directly into another buffer to be displayed.  If we
 were to implement double buffering it would provide the user with a far smoother
 experience.
 \subsubsection{Label Dialogue Boxes}
+At the moment dialogue boxes relating to adding/editing of labels all are
+spawned at the same point: The centre of the user's monitor.  It would be much
+more desirable to have them be more like tooltips appearing next to the marked
+area.  This would give the user more confirmation about what they are editing.
+
 \subsubsection{No Easy Way to Change Marked Objects}
 \subsubsection{General Aesthetic}
 
