--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -220,7 +220,11 @@ change the on-screen colour of each shape, and tying it to the label colour in
 the list. Highlighting the shape in this case could darken or lighten the
 colours.
 \subsubsection{Scaling}
-
+The software currently only handles images at 800 x 600 pixels in size;
+larger images that are loaded will only be partially visible, and smaller
+images are shunted to the top corner of the interface. Ideally the image would
+be resized to fit the window size. This would help appearance as well as
+usability.
 \subsection{The Ugly}
 \subsubsection{General Aesthetic}
 
