--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -239,6 +239,11 @@ darken or lighten the colours.
 
 \subsection{The Ugly}
 \subsubsection{General Aesthetic}
+A fundamental part of HCI design is that interface be aesthetically pleasing and
+minimal (Neilson - 9).  We feel that we have achieved the minimal part of that,
+but not the aesthetically pleasing part.  Swing is not the prettiest thing in
+the world.  If we had more time we would look into finding a nice theme to use
+and applying it.  This would make the program more appealing to use to users.
 
 \section{Appendices}
 \appendix
