title and contents

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -2,6 +2,12 @@
 
 \begin{document}
 
+\title{L'Bl\"{u}r: an Alternative to LabelMe in the World of Image Labelling Software}
+\author{s0934142 \and s0901522}
+\maketitle
+
+\tableofcontents
+
 \section{LabelMe}
 LabelMe is the product offered by MIT that our system is intended to be
 functionally equivalent to.  There are therefore valuable lessons, both good and
