--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -244,6 +244,11 @@ usability.
 \subsection{The Ugly}
 \subsubsection{General Aesthetic}
 
+\subsection{Conclusion}
+L'Bl\"{u}r improves upon LabelMe with greater adherence to both Shneiderman's
+Golden Rules and Nielsen's 10 Usability Heuristics - for example,
+the inclusion of shortcuts and improved design consistency.
+
 \section{Appendices}
 \appendix
 
