--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -247,6 +247,7 @@ larger images that are loaded will only be partially visible, and smaller
 images are shunted to the top corner of the interface. Ideally the image would
 be resized to fit the window size - this would help appearance as well as
 usability.
+
 \subsection{The Ugly}
 \subsubsection{General Aesthetic}
 A fundamental part of HCI design is that interface be aesthetically pleasing and
@@ -258,7 +259,9 @@ and applying it.  This would make the program more appealing to use to users.
 \subsection{Conclusion}
 L'Bl\"{u}r improves upon LabelMe with greater adherence to both Shneiderman's
 Golden Rules and Nielsen's 10 Usability Heuristics - for example,
-the inclusion of shortcuts and improved design consistency.
+the inclusion of shortcuts and improved design consistency. The feedback
+dialogues, undo feature and error handling also help conform to each set of
+guidelines.
 
 \section{Appendices}
 \appendix
