finished for the night

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -76,9 +76,13 @@ The functional aspects of these requirements are not difficult to implement so
 the challenge, and where we spent most of our time, was to fulfill the softer
 requirements by making them easy to use and follow the principles.
 
+GOMS
+
 \section{L'Bl\"{u}r}
+A PICTURE OF THE FINISHED PRODUCT
 
 \subsection{Design and Process}
+PICTURES DEMONSTRATING AND EXPLAINING A BIT MORE
 Our design process was to iteratively build backend functionality and then make
 it accessible through the frontend.  And throughout the whole process we would
 fix bugs and tweak the UI.  To start with we implmented opening new images,
@@ -212,7 +216,7 @@ as much we feel.
 The following are features that we identified as useful additions and would have
 liked to implement but ran out of time.
 
-\subsubsection{A gallery of pictures} 
+\subsubsection{A Gallery of Pictures} 
 Having something like a bar along the bottom that displays all the images in the
 current directory.  This is good for the user as it means they do not have to
 keep navigating the file dialogue when they want to start labelling a new image
@@ -222,7 +226,7 @@ goal of the program is to label images en masse, perhaps a simple arrow to
 navigate back and forward (as in an image preview application) would speed the
 process significantly.
 
-\subsubsection{A gallery of labels}
+\subsubsection{A Gallery of Labels}
 Instead of just having a list of the text of labels that have been added to an
 image we would like the section of the image marked out for labelling to appear
 in a gallery as an icon for that label.  In cases where there are ambiguous
@@ -234,7 +238,7 @@ system.  This could be combined with the gallery of pictures mentioned above and
 allowing the user to tab between the two views, this would help keep the
 application consistent.
 
-\subsubsection{Changing Colour of marked objects}
+\subsubsection{Changing the Colour of Marked Objects}
 Although the program can handle stacking shapes, it would be more useful to
 change the on-screen colour of each shape, and tying it to the label colour in
 the list.  This would allow the stacked shapes to be far more easily distinguished,
@@ -261,7 +265,15 @@ L'Bl\"{u}r improves upon LabelMe with greater adherence to both Shneiderman's
 Golden Rules and Nielsen's 10 Usability Heuristics - for example,
 the inclusion of shortcuts and improved design consistency. The feedback
 dialogues, undo feature and error handling also help conform to each set of
-guidelines.
+guidelines.  In terms of learnability we feel that like LabelMe we do not
+require much learnt knowledge.  A user should be able to come in and set 
+straight to labelling and if they do get stuck then there is a help feature to
+guide them, this is a low cognitive load for the user which is preferable.
+In terms of flexibility we feel we are better than LabelMe, we have
+the same range of ways in which information is shared between program and user
+but we have given the user a range of control options with the addition of
+keyboard shortcuts.  In terms of robustness we feel we are on the same level as
+LabelMe.
 
 \section{Appendices}
 \appendix
