removed need for Norman

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -39,16 +39,16 @@ standard for software help.
 However it is not all good as we have breaches of Shneiderman's first and
 second golden laws and Neilsen's ninth heuristic.  The first golden law is
 breached because the erase button is actually an undo button, this mislabelling
-could be prevented if (CITE DESIGN OF EVERYDAY THINGS DOOR HANDLES BIT) the text
-labels were removed leaving only the icons.  Although to keep consistent with
-the rest of the operating system a back arrow would be more useful, but the
-eraser is consistent with application's aesthetic.  This leads us onto the
-breach of Neilson's 9th heuristic, although the system is minimalist, it is
-definitely not aesthetically pleasing: elements of the UI appear unconnected,
-icons are unevenly spaced and iconsistent in design with the erase button not
-having a red outline, and on a more subjective level we do not like the cartoony
-style of its design.  Shneiderman's second law is breached by there not being
-any short cuts for power users, these could include undo.
+could be prevented if the text labels were removed leaving only the icons.  
+Although to keep consistent with the rest of the operating system a back arrow 
+would be more useful, but the eraser is consistent with application's aesthetic.  
+This leads us onto the breach of Neilson's 9th heuristic, although the system 
+is minimalist, it is definitely not aesthetically pleasing: elements of the UI 
+appear unconnected, icons are unevenly spaced and iconsistent in design with 
+the erase button not having a red outline, and on a more subjective level we 
+do not like the cartoony style of its design.  Shneiderman's second law is 
+breached by there not being any short cuts for power users, these could include 
+undo.
 
 In terms of learnability, flexibility and robustness labelme is fairly good. 
 It appears to be easy for new users to get to grips with learning the tool, and
